--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <form name="register" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="birthday" />
+      <input type="text" name="city" />
+      <input type="text" name="info" />
+      
+    </form>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
