--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,28 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <form name="register" netlify netlify-honeypot="bot-field" hidden>
+    <form name="registerSolo" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <input type="text" name="birthday" />
+      <input type="number" name="birthday" />
       <input type="text" name="city" />
       <input type="text" name="info" />
-      
+    </form>
+
+    <form name="registerTeam" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="teamName" />
+      <input type="email" name="email" />
+      <input type="number" name="birthday" />
+      <input type="text" name="city" />
+      <input type="text" name="info" />
+    </form>
+
+    <form name="registerKids" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="number" name="birthday" />
+      <input type="text" name="city" />
+      <input type="text" name="info" />
     </form>
 
     <div id="root"></div>
