Change team form names

--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,24 @@
 
     <form name="registerTeam" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="teamName" />
-      <input type="email" name="email" />
-      <input type="number" name="birthday" />
-      <input type="text" name="city" />
+      <input type="email" name="email1" />
+      <input type="number" name="birthday1" />
+      <input type="text" name="city1" />
+      <input type="email" name="email2" />
+      <input type="number" name="birthday2" />
+      <input type="text" name="city2" />
+      <input type="email" name="email3" />
+      <input type="number" name="birthday3" />
+      <input type="text" name="city3" />
       <input type="text" name="info" />
     </form>
 
     <form name="registerKids" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <input type="number" name="birthday" />
-      <input type="text" name="city" />
-      <input type="text" name="info" />
+      <input type="text" name="nameKID" />
+      <input type="email" name="emailKID" />
+      <input type="number" name="birthdayKID" />
+      <input type="text" name="cityKID" />
+      <input type="text" name="infoKID" />
     </form>
 
     <div id="root"></div>
