Add race rules Add links to distances on film Change RegSuccess container Add guardian fields to kids register Add secon consent checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
       <input type="number" name="birthdayKID" />
       <input type="text" name="cityKID" />
       <input type="text" name="infoKID" />
+      <input type="text" name="guardianName" />
+      <input type="tel" name="guardianPhone" />
+      <input type="email" name="guardianEmail" />
     </form>
     
 
