--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,15 @@
 
     <form name="registerTeam" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="teamName" />
+      <input type="text" name="name1" />
       <input type="email" name="email1" />
       <input type="number" name="birthday1" />
       <input type="text" name="city1" />
+      <input type="text" name="name2" />
       <input type="email" name="email2" />
       <input type="number" name="birthday2" />
       <input type="text" name="city2" />
+      <input type="text" name="name3" />
       <input type="email" name="email3" />
       <input type="number" name="birthday3" />
       <input type="text" name="city3" />
