Update birthday selection Add kids again Add news on kids Update lions mail Change spelling

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,10 @@
     <form name="registerSolo" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
-      <input type="number" name="birthday" />
+      <input type="select" name="year" />
+      <input type="select" name="month" />
+      <input type="select" name="day" />
+      <input type="select" name="gender" />
       <input type="text" name="city" />
       <input type="text" name="info" />
     </form>
@@ -30,15 +33,21 @@
       <input type="text" name="teamName" />
       <input type="text" name="name1" />
       <input type="email" name="email1" />
-      <input type="number" name="birthday1" />
+      <input type="select" name="year1" />
+      <input type="select" name="month1" />
+      <input type="select" name="day1" />
       <input type="text" name="city1" />
       <input type="text" name="name2" />
       <input type="email" name="email2" />
-      <input type="number" name="birthday2" />
+      <input type="select" name="year2" />
+      <input type="select" name="month2" />
+      <input type="select" name="day2" />
       <input type="text" name="city2" />
       <input type="text" name="name3" />
       <input type="email" name="email3" />
-      <input type="number" name="birthday3" />
+      <input type="select" name="year3" />
+      <input type="select" name="month3" />
+      <input type="select" name="day3" />
       <input type="text" name="city3" />
       <input type="text" name="info" />
     </form>
@@ -46,7 +55,10 @@
     <form name="registerKids" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="nameKID" />
       <input type="email" name="emailKID" />
-      <input type="number" name="birthdayKID" />
+      <input type="select" name="yearKID" />
+      <input type="select" name="monthKID" />
+      <input type="select" name="dayKID" />
+      <input type="select" name="genderKID" />
       <input type="text" name="cityKID" />
       <input type="text" name="infoKID" />
       <input type="text" name="guardianName" />
