Started to add to Utmaningen Added cards with each utmaning, along with modals for more information and larger img Added start to upload funcionallity

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/hona_256.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Hemsida för Hensmåla Triathlon"
-    />
+    <meta name="description" content="Hemsida för Hensmåla Triathlon" />
     <link rel="icon" href="/images/logos/hona_256.png" />
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <title>Hensmåla Triathlon</title>
   </head>
   <body>
