--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
     <link rel="icon" href="/images/logos/hona_256.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+
+    <script
+      src="https://kit.fontawesome.com/1f5f856382.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Hensmåla Triathlon</title>
   </head>
