--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Hemsida för Hensmåla Triathlon" />
-    <meta property="og:image" content="%PUBLIC_URL%/utmaningen-thumb.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/hens-thumb.png" />
     <link rel="icon" href="/images/logos/hona_256.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
