--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       src="https://kit.fontawesome.com/1f5f856382.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LcKIqQZAAAAAK88TdJkAsZAOZ4YLSf7VFqtXMNz"></script>
+
 
     <title>Hensmåla Triathlon</title>
   </head>
