Change font to Poppins

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Hemsida för Hensmåla Triathlon" />
     <meta property="og:image" content="%PUBLIC_URL%/thumb.png" />
     <link rel="icon" href="/images/logos/hona_256.png" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
       src="https://kit.fontawesome.com/1f5f856382.js"
