Add TS to challenge and remove serviceworker file for pwa

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/1f5f856382.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
     <script src="https://www.google.com/recaptcha/api.js?render=6LcKIqQZAAAAAK88TdJkAsZAOZ4YLSf7VFqtXMNz"></script>
 
 
